[gd_scene load_steps=19 format=3 uid="uid://d4bs4i6ftyij1"]

[ext_resource type="PackedScene" uid="uid://bpck4nf2x81gt" path="res://Scenes/Prefabs/UI/MinigamesPanel.tscn" id="1_2gm7f"]
[ext_resource type="Script" path="res://Scripts/Minigames/WalkToTarget/CodeArea.gd" id="1_dto5f"]
[ext_resource type="Texture2D" uid="uid://dl8dw08og2gr8" path="res://Images/Backgrounds/Placeholder_backgorund_minigames.jpg" id="2_jbpt1"]
[ext_resource type="Texture2D" uid="uid://dpgvthlrc473g" path="res://Images/Tiles/Tile.png" id="3_631bc"]
[ext_resource type="Script" path="res://Scripts/Minigames/WalkToTarget/CodeTest.gd" id="4_8jv00"]
[ext_resource type="Script" path="res://Scripts/Minigames/WalkToTarget/GenerateBoard.gd" id="5_y7m5q"]
[ext_resource type="Script" path="res://Scripts/Minigames/WalkToTarget/PlayerGoToTarget.gd" id="6_uoexw"]
[ext_resource type="Texture2D" uid="uid://xr24310ei2bc" path="res://Images/Backgrounds/LACMTA_Circle_Purple_Line.svg.png" id="7_g0173"]
[ext_resource type="Texture2D" uid="uid://cu0aeijd1ek4e" path="res://Images/Accessories/Bowl/EmptyBowl.png" id="8_1riy0"]
[ext_resource type="Texture2D" uid="uid://dwwahex67somt" path="res://Images/Accessories/Bowl/Food.png" id="9_y3dwg"]
[ext_resource type="PackedScene" uid="uid://dluxwfsypbvws" path="res://Scenes/Prefabs/UI/MinigamesLives.tscn" id="10_aljue"]
[ext_resource type="PackedScene" uid="uid://cyn346855vab8" path="res://Scenes/Prefabs/UI/PauseUI.tscn" id="11_cltnc"]
[ext_resource type="PackedScene" uid="uid://doyyhye04gaml" path="res://Scenes/Prefabs/UI/LoseUI.tscn" id="11_nlonb"]
[ext_resource type="FontFile" uid="uid://ccgpsjqwwow8o" path="res://Fonts/Bubblegum.ttf" id="13_dxyar"]
[ext_resource type="Script" path="res://Scenes/Minigames/GameState.gd" id="13_oqhy5"]
[ext_resource type="Texture2D" uid="uid://cjcm8dskr3xnv" path="res://Images/UI/Currency.png" id="14_ollgd"]
[ext_resource type="Texture2D" uid="uid://bhcgfqs2j6bx4" path="res://Images/UI/Lives/Life.png" id="15_76x2i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qkeyp"]
radius = 30.0167

[node name="WalkToTarget" type="Node2D"]

[node name="CodeArea" type="Node2D" parent="."]
script = ExtResource("1_dto5f")

[node name="Background" type="Sprite2D" parent="CodeArea"]
modulate = Color(0.708848, 0.644184, 0.558376, 1)
position = Vector2(253.75, 324.5)
scale = Vector2(0.689116, 1.32041)
texture = ExtResource("2_jbpt1")

[node name="CodeField" type="TextEdit" parent="CodeArea"]
offset_left = 14.0
offset_top = 256.0
offset_right = 304.0
offset_bottom = 570.0

[node name="ExecuteButton" type="Button" parent="CodeArea" groups=["Button"]]
offset_left = 99.0
offset_top = 583.0
offset_right = 224.0
offset_bottom = 634.0
text = "Wykonaj"

[node name="PlayerCode" type="Label" parent="CodeArea"]
offset_left = 315.0
offset_top = 194.0
offset_right = 498.0
offset_bottom = 567.0
theme_override_font_sizes/font_size = 20

[node name="Background" type="Node2D" parent="."]

[node name="GameBackground" type="Sprite2D" parent="Background"]
modulate = Color(0.468015, 0.897566, 0.49354, 1)
position = Vector2(828.292, 324.708)
scale = Vector2(0.317668, 0.315715)
texture = ExtResource("3_631bc")

[node name="GameArea" type="Node2D" parent="."]
script = ExtResource("4_8jv00")

[node name="Board" type="Node2D" parent="."]
script = ExtResource("5_y7m5q")

[node name="Player" type="Area2D" parent="."]
position = Vector2(0, -2)
script = ExtResource("6_uoexw")

[node name="PlayerSprite" type="Sprite2D" parent="Player"]
scale = Vector2(0.116211, 0.116211)
texture = ExtResource("7_g0173")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_qkeyp")

[node name="CollWaiter" type="Timer" parent="Player"]
one_shot = true

[node name="TweenWaiter" type="Timer" parent="Player"]
one_shot = true

[node name="RestartWaiter" type="Timer" parent="Player"]
one_shot = true

[node name="NextLevelWaiter" type="Timer" parent="Player"]
one_shot = true

[node name="Bowl" type="Node2D" parent="."]

[node name="Miska" type="Sprite2D" parent="Bowl"]
position = Vector2(1.19209e-07, -1)
scale = Vector2(0.0583366, 0.0583366)
texture = ExtResource("8_1riy0")

[node name="Food" type="Sprite2D" parent="Bowl"]
scale = Vector2(0.058, 0.058)
texture = ExtResource("9_y3dwg")

[node name="Layout" type="Node2D" parent="."]

[node name="MinigamesLives" parent="Layout" instance=ExtResource("10_aljue")]
position = Vector2(90, 0)

[node name="Pause" parent="Layout" instance=ExtResource("11_cltnc")]

[node name="GameState" type="Node2D" parent="Layout"]
script = ExtResource("13_oqhy5")

[node name="Score" type="Label" parent="Layout/GameState"]
offset_left = 9.0
offset_top = 79.0
offset_right = 182.0
offset_bottom = 127.0
theme_override_fonts/font = ExtResource("13_dxyar")
theme_override_font_sizes/font_size = 50
text = "Wynik:"

[node name="Money" type="Label" parent="Layout/GameState"]
offset_left = 66.0
offset_top = 132.0
offset_right = 239.0
offset_bottom = 186.0
theme_override_fonts/font = ExtResource("13_dxyar")
theme_override_font_sizes/font_size = 50

[node name="Fishes" type="Label" parent="Layout/GameState"]
offset_left = 66.0
offset_top = 194.0
offset_right = 239.0
offset_bottom = 248.0
theme_override_fonts/font = ExtResource("13_dxyar")
theme_override_font_sizes/font_size = 50

[node name="TextureRect" type="TextureRect" parent="Layout/GameState"]
offset_left = 5.0
offset_top = 124.0
offset_right = 62.0
offset_bottom = 189.0
texture = ExtResource("14_ollgd")
expand_mode = 1

[node name="Life" type="Sprite2D" parent="Layout/GameState"]
position = Vector2(31, 218)
scale = Vector2(0.0840081, 0.0840081)
texture = ExtResource("15_76x2i")

[node name="Lose" parent="Layout" instance=ExtResource("11_nlonb")]

[node name="MinigamesPanel" parent="." instance=ExtResource("1_2gm7f")]
game_name = "Snack Navigator"

[connection signal="text_changed" from="CodeArea/CodeField" to="CodeArea" method="_on_code_field_text_changed"]
[connection signal="pressed" from="CodeArea/ExecuteButton" to="CodeArea" method="_on_execute_button_pressed"]
[connection signal="area_entered" from="Player" to="Player" method="_on_area_entered"]
[connection signal="area_exited" from="Player" to="Player" method="_on_area_exited"]
[connection signal="timeout" from="Player/CollWaiter" to="Player" method="_on_coll_waiter_timeout"]
[connection signal="timeout" from="Player/TweenWaiter" to="Player" method="_on_tween_waiter_timeout"]
[connection signal="timeout" from="Player/RestartWaiter" to="Player" method="_on_restart_waiter_timeout"]
[connection signal="timeout" from="Player/NextLevelWaiter" to="Player" method="_on_next_level_waiter_timeout"]
